--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/runtime": "^7.15.4",
+    "clean-css": "^5.2.4",
     "copy-webpack-plugin": "^9.0.1",
     "less": "^4.1.1",
+    "uglify-js": "^3.15.2",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
     "webpack-merge-and-include-globally": "^2.3.4"
-  },
-  "dependencies": {
   }
 }
