--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-dist/
+dist/scripts/
+dist/stylesheets/
 node_modules/
 src/stylesheets/3rd-party/bootstrap/less/bootstrap.css
 src/stylesheets/editor/SurveyEditorStyleSheet.css
